src/snapshots/mst__tree__tests__two_unordered.snap
---
source: src/tree.rs
expression: v.finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 0|<A>·|A|<B>·|B"]

}

